RESOLVED FIXED299881
WTF::DataMutexLocker doesn't need TSan annotations
https://bugs.webkit.org/show_bug.cgi?id=299881
Summary WTF::DataMutexLocker doesn't need TSan annotations
David Kilzer (:ddkilzer)
Reported 2025-09-30 10:24:39 PDT
WTF::DataMutexLocker doesn't need TSan annotations. WTF::DataMutexLocker uses a WTF::DataMutex which uses a WTF::Lock, and WTF::Lock already has TSan annotations.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-30 10:25:26 PDT
David Kilzer (:ddkilzer)
Comment 2 2025-09-30 10:32:11 PDT
EWS
Comment 3 2025-09-30 11:24:41 PDT
Committed 300764@main (9e42ac2a7330): <https://commits.webkit.org/300764@main> Reviewed commits have been landed. Closing PR #51570 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.