WTF::DataMutexLocker doesn't need TSan annotations <https://bugs.webkit.org/show_bug.cgi?id=299881> <rdar://161664462>

Reviewed by Dan Hecht.

* Source/WTF/wtf/DataMutex.h:
- Remove TSan annotations since WTF::DataMutex::m_lock already has them.

Canonical link: https://commits.webkit.org/300764@main